test/spec_vectors/ref/fail/module_10.wat
(module (func $loop-result-invalid (drop (loop (result (ref 1)) (unreachable)))))